Fixed bug with extra white space on right side in mobile screen format.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -398,7 +398,7 @@ section.features .section-heading {
 }
 
 
-@media screen and (max-width: 991px) and (max-width: 769px) {
+@media screen and (max-width: 991px) and (min-width: 769px) {
 
   section.features .section-heading {
     white-space: nowrap;
